# magiclab_rl_lab-feature-z1_12dof-update

./: .gitignore  README.md  magiclab_rl_lab.sh  play_bash.sh  play_keyboard_bash.sh  pyproject.toml  robot_interfaces.py  run_mujoco_joy.py  run_pipeline.py  train_bash.sh
scripts/: list_envs.py
scripts/rsl_rl/: play.py  play_keyboard.py  train.py
source/magiclab_rl_lab/: pyproject.toml  setup.py
source/magiclab_rl_lab/config/: extension.toml
source/magiclab_rl_lab/docs/: CHANGELOG.rst
source/magiclab_rl_lab/magiclab_rl_lab/: ui_extension_example.py
source/magiclab_rl_lab/magiclab_rl_lab/assets/robots/: magiclab.py
source/magiclab_rl_lab/magiclab_rl_lab/data/robots/magicbot-Z1/meshes/: left_ankle_roll_link.STL  right_ankle_roll_link.STL
source/magiclab_rl_lab/magiclab_rl_lab/data/robots/magicbot-Z1/urdf/: MagicBotZ1_12dof.urdf  MagicBotZ1_12dof_arm_ready_pos.urdf  MagicBotZ1_23dof.urdf
source/magiclab_rl_lab/magiclab_rl_lab/tasks/: __init__.py
source/magiclab_rl_lab/magiclab_rl_lab/tasks/locomotion/mdp/: observations.py  rewards.py
source/magiclab_rl_lab/magiclab_rl_lab/tasks/locomotion/robots/z1/12dof/: __init__.py
source/magiclab_rl_lab/magiclab_rl_lab/tasks/wiping/config/z1/: wiping_env_cfg.py
