[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "magiclab_rl_lab"
version = "0.2.1"
description = "Reinforcement Learning Lab for Magiclab Robots."
dependencies = [
    "argcomplete",
]
requires-python = ">=3.10"
license = { text = "Apache 2.0" }
authors = [
    { name = "Magiclab Robotics" }
]
maintainers = [
    { name = "Magiclab Robotics" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux"
]
dynamic = []
